--- a/_config.yml
+++ b/_config.yml
@@ -221,9 +221,9 @@ collections:
   portfolio:
     output: true
     permalink: /:collection/:path/
-  talks:
+  projects:
     output: true
-    permalink: /:collection/:path/
+    permalink: /:projects/:path/
 
 
 # These settings control how pages and collections are included in the site
