Projects collection link works?

--- a/_config.yml
+++ b/_config.yml
@@ -280,7 +280,15 @@ defaults:
       layout: talk
       author_profile: true
       share: true
-
+  # Projects Collection
+  - scope:
+      path: ""
+      type: projects
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true
 
 # Sass/SCSS
 sass:
