--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Sunwoo Baek"
 title_separator          : "-"
 name                     : &name "Sunwoo Baek"
 description              : &description "personal description"
-url                      : https://sbaek21.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : "https://sbaek21.github.io" # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "sbaek21/sbaek21.github.io"
 
