--- a/_config.yml
+++ b/_config.yml
@@ -236,7 +236,7 @@ defaults:
       author_profile: true
       read_time: true
       comments: true
-      share: true
+      share: false
       related: true
   # _pages
   - scope:
@@ -287,7 +287,7 @@ defaults:
     values:
       layout: single
       author_profile: true
-      share: true
+      share: false
       comments: true
 
 # Sass/SCSS
