--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   location         : "Champaign, IL"
   employer         : "University of Illinois Urbana-Champaign"
   uri              : # URL
-  email            : "jasmine4081@gmail.com" 
+  email            : "sunwoob2@illinois.edu" 
 
   # # Academic websites
   # arxiv            : # URL - Update with the correct link to your profile
