--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@ author:
   avatar           : "profile.jpg"
   name             : "Sunwoo Baek"
   pronouns         : # example: "she/her"  
-  bio              : "Senior in Computer Science + Chemistry at University of Illinois Urbana-Champaign"
+  bio              : "Senior in Computer Science + Chemistry at University of Illinois Urbana Champaign"
   location         : "Champaign, IL"
-  employer         : "University of Illinois Urbana-Champaign"
+  employer         : "University of Illinois Urbana Champaign"
   uri              : # URL
   email            : "sunwoob2@illinois.edu" 
 
