Check if bio is not shortened

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,9 @@ author:
   avatar           : "profile.jpg"
   name             : "Sunwoo Baek"
   pronouns         : # example: "she/her"  
-  bio              : "Senior in Computer Science + Chemistry at University of Illinois Urbana Champaign"
+  bio              : >
+    Senior in Computer Science and Chemistry at the University of Illinois Urbana-Champaign,
+    interested in accessibility, HCI, NLP, and machine learning.
   location         : "Champaign, IL"
   employer         : "University of Illinois Urbana Champaign"
   uri              : # URL
