--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,7 @@ author:
   avatar           : "profile.jpg"
   name             : "Sunwoo Baek"
   pronouns         : # example: "she/her"  
-  bio              : >
-    Senior in Computer Science and Chemistry at the University of Illinois Urbana-Champaign,
-    interested in accessibility, HCI, NLP, and machine learning.
+  bio              : "Senior in Computer Science + Chemistry at University of Illinois Urbana Champaign"
   location         : "Champaign, IL"
   employer         : "University of Illinois Urbana Champaign"
   uri              : # URL
