--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.jpg"
   name             : "Sunwoo Baek"
   pronouns         : # example: "she/her"  
-  bio              : "Senior in Computer Science + Chemistry at University of Illinois Urbana Champaign"
+  bio              : "Incoming Master's student in Computer Science at University of Illinois Urbana Champaign"
   location         : "Champaign, IL"
   employer         : "University of Illinois Urbana Champaign"
   uri              : # URL
